# spade

./: .Rbuildignore  .gitignore  CNAME  DESCRIPTION  LICENSE  NAMESPACE  README.md  about.html  aboutus.html  cleanup  configure  configure.ac  configure.win  index.html
R/: annotation.R  autoAssign.R  cluster.R  downsample.R  driver.R  fcs.R  upsample.R
_includes/: footer.html  header.html
_layouts/: home.html
assets/: main.css
exec/: density_driver.sh
inst/doc/: SPADE.Rnw  spaderef.bib
inst/extdata/: SimulatedRawData.fcs
inst/tools/: density_driver.sh  file_driver.sh  gridenginewrapper.sh  organize_fold_pdfs.sh  organize_median_pdfs.sh  organizepdfs.sh  runSPADE.R
inst/tools/PopulationRules/: BCells.txt  CD4 Memory T-Cells.txt  CD4TCells.txt  (+6 more)
m4/: ac_openmp.m4
man/: FlowSPD.FCSToTree.Rd  FlowSPD.addClusterToFCS.Rd  FlowSPD.addDensityToFCS.Rd  FlowSPD.annotateGraph.Rd  FlowSPD.annotateMakers.Rd  FlowSPD.downsampleFCS.Rd  FlowSPD.driver.Rd  FlowSPD.layout.arch.Rd  FlowSPD.markerMedians.Rd  FlowSPD.plot.trees.Rd  FlowSPD.write.graph.Rd  SPADE.FCSToTree.Rd  SPADE.addClusterToFCS.Rd  SPADE.addDensityToFCS.Rd  SPADE.annotateGraph.Rd  SPADE.downsampleFCS.Rd  SPADE.driver.Rd  SPADE.flattenAnnotations.Rd  SPADE.installPlugin.Rd  SPADE.layout.arch.Rd  SPADE.markerMedians.Rd  SPADE.normalize.trees.Rd  SPADE.plot.trees.Rd  SPADE.read.FCS.Rd  SPADE.workflow.concat.FCS.Rd  SPADE.write.graph.Rd
src/: Makevars  Makevars.in  Makevars.win  cluster.cc  cuda_distance.cu  downsample.cc  flowSPD.cc  prng.cc  prng.h  spade.cc  upsample.cc  util.h
vignettes/: SPADE.Rnw
